--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,21 +3,13 @@
 <h2>Cats that are not sleepy!</h2>
 
 <ul>
-  {{#each cats}}
-    {{#unless sleepy}}
-      {{> cats/cat-block sleep=true}}
-    {{/unless}}
-  {{/each}}
+  {{#each cats}} {{#unless sleepy}} {{> cats/cat-block sleep=true}} {{/unless}} {{/each}}
 </ul>
 
 <h2>Cats that are sleepy!</h2>
 
 <ul>
-  {{#each cats}}
-    {{#if sleepy}}
-      {{> cats/cat-block sleep=false}}
-    {{/if}}
-  {{/each}}
+  {{#each cats}} {{#if sleepy}} {{> cats/cat-block sleep=false}} {{/if}} {{/each}}
 </ul>
 
 <h2>Add a Cat</h2>
@@ -29,8 +21,10 @@
   </div>
 
   <div class="form-group">
-    <label for="slee">Sleepy?</label><br>
-    <input type="radio" name="sleepy" value="1" checked> Sleepy!<br>
+    <label for="slee">Sleepy?</label>
+    <br>
+    <input type="radio" name="sleepy" value="1" checked> Sleepy!
+    <br>
     <input type="radio" name="sleepy" value="0"> Awake
   </div>
 
