--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,32 +1,35 @@
-<h1>Eat Da Burger!</h1>
+  <div>
+    <img src="/public/assets/img/yummy-burger.jpg" alt="burger image">
+    <h2>Eat-Da-Burger!</h2>
+    <ul>
+      {{#each burgers}} {{#unless devoured}}  {{/unless}} {{/each}}
+    </ul>
+        
+    <ul>
+      {{#each burgers}} {{#if devoured}} {{/if}} {{/each}}
+    </ul>
 
-<h2>Burgerss that are not devoured!</h2>
+    <form class="create-form">
 
-<ul>
-  {{#each burgers}} {{#unless devoured}} {{> burgers devoured=false}} {{/unless}} {{/each}}
-</ul>
+      <div class="form-group">
+        <!-- <label for="bgr">Burger Name:</label> -->
+        <input type="text" id="bgr" name="name">
+      </div>
 
-<h2>Burgers that are devoured!</h2>
+      <!-- <div class="form-group">
+                <label for="devour">Devoured?</label>
+                <br>
+                <input type="radio" name="devour" value="1" checked> Devoured!
+                <br>
+                <input type="radio" name="devour" value="0"> Not devoured
+            </div> -->
 
-<ul>
-  {{#each burgers}} {{#if devoured}} {{> burgers devoured=true}} {{/if}} {{/each}}
-</ul>
+      <button type="submit">Submit</button>
+      <div>
+        <p>Click "Submit" to add Burger</p>
+        <br>
+      </div>
 
-<h2>Add a Burger</h2>
-<form class="create-form">
 
-  <div class="form-group">
-    <label for="bgr">Burger Name:</label>
-    <input type="text" id="bgr" name="name">
+    </form>
   </div>
-
-  <div class="form-group">
-    <label for="devour">Devoured?</label>
-    <br>
-    <input type="radio" name="devour" value="1" checked> Devoured!
-    <br>
-    <input type="radio" name="devour" value="0"> Not devoured
-  </div>
-
-  <button type="submit">Add Burger</button>
-</form>
