--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,5 @@
   <div>
-    <img src="/public/assets/img/yummy-burger.jpg" alt="burger image">
+    <img src="/assets/img/yummy-burger.jpg" alt="burger image">
     <h2>Eat-Da-Burger!</h2>
     <ul>
       {{#each burgers}} {{#unless devoured}}  {{/unless}} {{/each}}
@@ -12,7 +12,6 @@
     <form class="create-form">
 
       <div class="form-group">
-        <!-- <label for="bgr">Burger Name:</label> -->
         <input type="text" id="bgr" name="name">
       </div>
 
@@ -25,11 +24,17 @@
             </div> -->
 
       <button type="submit">Submit</button>
-      <div>
-        <p>Click "Submit" to add Burger</p>
-        <br>
-      </div>
+
 
 
     </form>
+
+          <div>
+            <br>
+            <p>Click "Submit" to add Burger</p>
+            <br>
+          </div>
+
+                          {{!-- <label for="bgr">Click "Submit" to add Burger</label> --}}
+
   </div>
