can post new burgers, but not switch from eat to devoured

--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -11,33 +11,22 @@ img, h2 {
 	color: rgb(250, 245, 245)
 }
 
-form, #bgr {
+ form {
 	width: 200px;
 	height: 50px;
 	text-align: center;
-	margin-left: 252px;
+	margin-left: 320px;
 	color: rgb(250, 245, 245)
 }
 
+li, h3 {
+	color: rgb(250, 245, 245);
+}
+
 button {
-	width: 200px;
+	width: 100px;
 	height: 20px;
 	text-align: center;
-	margin-left: 255px;
+	/* margin-left: 255px; */
 	color: #802525;
 }
-
-p {
-	text-align: center;
-	margin-right: 50px;
-	color: rgb(250, 245, 245);
-	
-	
-}
-
-/* h5 {
-	text-align: center;
-	margin: 33%
-	/* margin-right: -36px; */
-	
-/* }  */
