--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,40 +1,75 @@
-  <div>
-    <img src="/assets/img/yummy-burger.jpg" alt="burger image">
-    <h2>Eat-Da-Burger!</h2>
-    <ul>
-      {{#each burgers}} {{#unless devoured}}  {{/unless}} {{/each}}
-    </ul>
-        
-    <ul>
-      {{#each burgers}} {{#if devoured}} {{/if}} {{/each}}
-    </ul>
+  </div> 
 
-    <form class="create-form">
-
-      <div class="form-group">
-        <input type="text" id="bgr" name="name">
+  <div class="container">
+  
+    <div class="row">
+  
+      <div class="col-md-12">
+        <img src="/assets/img/yummy-burger.jpg" alt="burger" class="img-responsive center-block">
       </div>
-
-      <!-- <div class="form-group">
-                <label for="devour">Devoured?</label>
-                <br>
-                <input type="radio" name="devour" value="1" checked> Devoured!
-                <br>
-                <input type="radio" name="devour" value="0"> Not devoured
-            </div> -->
-
-      <button type="submit">Submit</button>
-
-
-
-    </form>
-
-          <div>
+  
+    </div>
+  
+    <div class="row">
+  
+      <div class="col-md-12">
+        <h2 class="text-center text-danger">Eat-Da-Burger</h2>
+      </div>
+  
+    </div>
+  
+    <div class="row">
+  
+      <div class="col-md-5">
+        <h3>Uneaten Burgers</h3>
+        <ul>
+          {{#each burgers}} {{#unless devoured}}
+          <li>
+            <h5>{{id}}. {{burger_name}}
+              <form action='burger/eat/{{id}}' method='PUT'>
+                <input type='hidden' name='devoured' value='false'>
+                <button type='submit' class="btn btn-default">EAT THIS!</button>
+              </form>
+            </h5>
+          </li>
+          {{/unless}} {{/each}}
+        </ul>
+      </div>
+  
+      <div class="col-md-2"></div>
+  
+      <div class="col-md-5">
+        <h3 class="text-muted">Eaten Burgers</h3>
+        <ul>
+          {{#each burgers}} {{#if devoured}}
+          <li>
+            <h5 class="text-muted">{{id}}. {{burger_name}}</h5>
+          </li>
+          {{/if}} {{/each}}
+        </ul>
+      </div>
+  
+      <!-- end third row -->
+    </div>
+  
+    <br>
+    <br>
+  
+    <div class="row">
+  
+      <div class="col-md-12 text-center">
+        <form class="create-update-form" action="/burger/create" method="POST">
+          <div class="form-group">
+            <!-- <label for="bg">Burger Name:</label> -->
+            <textarea type="text" name="burger_name"></textarea>
             <br>
-            <p>Click "Submit" to add Burger</p>
-            <br>
+            <button class="btn btn-default" type="submit">Submit</button>
+            <h5 class="text-center">Enter a burger you want to eat and click Submit!</h5>
           </div>
-
-                          {{!-- <label for="bgr">Click "Submit" to add Burger</label> --}}
-
+        </form>
+      </div>
+  
+    </div>
+  
+    
   </div>
