--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -11,11 +11,11 @@ img, h2 {
 	color: rgb(250, 245, 245)
 }
 
- form {
+ #create {
 	width: 200px;
 	height: 50px;
 	text-align: center;
-	margin-left: 320px;
+	margin-left: 41%;
 	color: rgb(250, 245, 245)
 }
 
@@ -24,8 +24,8 @@ li, h3 {
 }
 
 button {
-	width: 100px;
-	height: 20px;
+	/* width: 100px;
+	height: 20px; */
 	text-align: center;
 	/* margin-left: 255px; */
 	color: #802525;
