--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -18,8 +18,8 @@
           {{#each burgers}} {{#unless devoured}}
           <li>
             <h5>{{id}}. {{burger_name}}
-              <form action='burger/eat/{{id}}' method='PUT'>
-                <input type='hidden' name='devoured' value='false'>
+              <form action='/burger/eat/{{id}}?_method=PUT' method='POST'>
+                {{!-- <input type='hidden' name='_METHOD' value='PUT'> --}}
                 <button type='submit' class="btn btn-default">EAT THIS!</button>
               </form>
             </h5>
@@ -35,7 +35,7 @@
         <ul>
           {{#each burgers}} {{#if devoured}}
           <li>
-          <h5 class="text-muted">{{id}}. {{burger_name}}</h5>
+          <h5 class="text">{{id}}. {{burger_name}}</h5>
           </li>
           {{/if}} {{/each}}
         </ul>
